# monarch

./: .gitignore  Cargo.toml  Dockerfile_amd  activate_conda.sh  build_docker.sh  monarch-setup.sh
.github/workflows/: test-gpu-python.yml  test-gpu-rust.yml
accelerator-sys/: Cargo.toml  build.rs
accelerator-sys/src/: lib.rs  wrapper.h
build_utils/src/: lib.rs
cuda-sys/: build.rs
cuda-sys/src/: wrapper.h
examples/: custom_bootstrap.sh  custom_bootstrap_exec.py  custom_bootstrap_exec.sh  init_docker_container.sh  job_output.txt  just_titan.ipynb  monarch_titan_slurm.ipynb  output  rdma_example.py  run_no_monarch.sh  run_titan_in_custom_bootstrap.sh  slurm_barrier.ipynb  slurm_barrier.py  slurm_barrier_john_test.ipynb  slurm_barrier_mreso.py  slurm_barrier_mreso_no_monarch.py  slurm_barrier_mreso_test.ipynb  slurm_ddp.ipynb  slurm_ddp_chris.ipynb  slurm_titan.ipynb  slurm_titan_chris.ipynb  slurm_titan_monarch.py  slurm_titan_monarch_v1.py  slurm_titan_mreso.ipynb
examples/slurm/: utils.py  utils_amd.py  utils_with_init.py
hip-sys/: Cargo.toml  build.rs
hip-sys/src/: lib.rs  wrapper.h
hyperactor_mesh/src/: bootstrap.rs
monarch_extension/: Cargo.toml
monarch_messages/: Cargo.toml
monarch_rdma/: Cargo.toml  build.rs
monarch_rdma/src/: ibverbs_primitives.rs  macros.rs  rdma_components.rs  rdma_manager_actor.rs  rdma_manager_actor_tests.rs  test_utils.rs
monarch_rdma_auto/: Cargo.toml  build.rs
monarch_rdma_auto/src/: lib.rs
monarch_rdma_hip/: Cargo.toml  build.rs
monarch_rdma_hip/src/: lib.rs
monarch_simulator/: Cargo.toml
monarch_tensor_worker/: Cargo.toml
nccl-sys/: build.rs
nccl-sys/src/: lib.rs  nccl.h
old_hip_code/hip-sys/: Cargo.toml
old_hip_code/rdmaxcel-sys-hip/: Cargo.toml  build.rs
python/tests/: test_actor_error.py  test_allocator.py  test_debugger.py
rdmaxcel-sys/: build.rs
rdmaxcel-sys-hip/: Cargo.toml  README.md  build.rs
scripts/: common-setup.sh
torch-sys/: build.rs
torch-sys-accel/: Cargo.toml
torch-sys-cuda/: Cargo.toml  build.rs
(+53 files in other folders)
