[workspace]
resolver = "2"
members = [
    "controller",
    "cuda-sys",
    "hip-sys",
    "erased_lifetime",
    "hyper",
    "hyperactor",
    "hyperactor_macros",
    "hyperactor_multiprocess",
    "hyperactor_mesh",
    "hyperactor_mesh_macros",
    "ndslice",
    "monarch_extension",
    "monarch_tensor_worker",
    "monarch_rdma",
    "nccl-sys",
    "rdmaxcel-sys",
    "rdmaxcel-sys-hip",
    "torch-sys",
]
