[workspace]
resolver = "2"
members = [
    "controller",
    "cuda-sys",
    "erased_lifetime",
    "hip-sys",
    "hyper",
    "hyperactor",
    "hyperactor_macros",
    "hyperactor_multiprocess",
    "hyperactor_mesh",
    "hyperactor_mesh_macros",
    "ndslice",
    "monarch_extension",
    "monarch_tensor_worker",
    "monarch_rdma",
    "monarch_rdma_hip",
    "nccl-sys",
    "rdmaxcel-sys",
    "rdmaxcel-sys-hip",
    "torch-sys",
]
