[workspace]
resolver = "2"
members = [
    "controller",
    "accelerator-sys",
    "erased_lifetime",
    "hyper",
    "hyperactor",
    "hyperactor_macros",
    "hyperactor_multiprocess",
    "hyperactor_mesh",
    "hyperactor_mesh_macros",
    "ndslice",
    "monarch_extension",
    "monarch_tensor_worker",
    "monarch_rdma",
    "monarch_rdma_auto",
    "nccl-sys",
    "rdmaxcel-sys",
    "torch-sys",
    "torch-sys-accel",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(rocm)", "cfg(cuda)"] }
